manifests/django.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bennu
  name: django
  namespace: bennuhp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bennu
  strategy: {}
  template:
    metadata:
      labels:
        app: bennu
    spec:
      containers:
      # TODO: need to replace SHA instead of latest tag
      - image: ghcr.io/hwakabh/bennu-official:latest
        imagePullPolicy: Always
        name: django
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bennu
  name: django
  namespace: bennuhp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: bennu
  type: LoadBalancer
