manifests/minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bennu
  name: minio
  namespace: bennuhp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bennu
  strategy: {}
  template:
    metadata:
      labels:
        app: bennu
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        imagePullPolicy: Always
        args:
          - server
          - /export
          - --console-address
          - :9001
        volumeMounts:
        - mountPath: /export
          name: minio-data
        ports:
        - name: minio
          containerPort: 9000
        - name: minio-ui
          containerPort: 9001
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: bennuhp
  labels:
    app: bennu
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: minio
  - port: 9001
    protocol: TCP
    targetPort: 9001
    name: minio-ui
  selector:
    app: bennu
  type: ClusterIP
