manifests/mysql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: bennu
  name: mysql
  namespace: bennuhp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bennu
  serviceName: mysql
  template:
    metadata:
      labels:
        app: bennu
    spec:
      containers:
      - name: mysql
        image: bitnami/mysql:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /opt/bitnami/mysql/data
          name: mysql-data
        ports:
        - name: mysql
          containerPort: 3306
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
      namespace: bennu
      labels:
        app: bennu
    spec:
      storageClassName: standard-rwo
      accessModes:
      - ReadWriteOnce
      volumeMode: Filesystem
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bennuhp
  labels:
    app: bennu
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: bennu
  clusterIP: None
