manifests/nfs-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  labels:
    app: bennu
    role: nfs-server
  namespace: bennuhp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bennu
      role: nfs-server
  template:
    metadata:
      labels:
        app: bennu
        role: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: gcr.io/google-containers/volume-nfs:latest
        ports:
        - name: nfs
          containerPort: 2049
        - name: mountd
          containerPort: 20048
        - name: rpcbind
          containerPort: 111
        securityContext:
          privileged: true
        volumeMounts:
          - mountPath: /data
            name: nfs-volume
      volumes:
      - name: nfs-volume
        persistentVolumeClaim:
          claimName: nfs-data
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: bennuhp
  labels:
    app: bennu
    role: nfs-server
spec:
  ports:
  - name: nfs
    port: 2049
  - name: mountd
    port: 20048
  - name: rpcbind
    port: 111
  selector:
    app: bennu
    role: nfs-server
  type: ClusterIP
