manifests/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bennu
  name: nginx
  namespace: bennuhp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bennu
  strategy: {}
  template:
    metadata:
      labels:
        app: bennu
    spec:
      containers:
      - image: bitnami/nginx:latest
        imagePullPolicy: Always
        name: nginx
        volumeMounts:
        - mountPath: /opt/bitnami/nginx/conf/server_blocks
          name: nginx-conf
        - mountPath: /usr/share/nginx/assets
          name: static
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-etc
      - name: static
        persistentVolumeClaim:
          claimName: staticfiles
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bennu
  name: nginx
  namespace: bennuhp
  annotations:
    cloud.google.com/l4-rbs: "enabled"
    # cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8443
  selector:
    app: bennu
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bennu-app
  namespace: bennuhp
spec:
  ingressClassName: "nginx"
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django
            port:
              number: 8000
      - pathType: Prefix
        path: "/assets"
        backend:
          service:
            name: nginx
            port:
              number: 80
